# OpenCV_Enviroment

./: CMakeLists.txt  README.md  main.cpp
